--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/features/Translation.Googletsx"],
+  "include": ["next-env.d.ts", "src/**/*.ts", "**/*.ts", "src/**/*.tsx", "**/*.tsx", ".next/types/**/*.ts", "src/features/Translation.Googletsx"],
   "exclude": ["node_modules"]
 }
