--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.7",
     "@google-cloud/translate": "^8.2.0",
     "aws-sdk": "^2.1622.0",
     "axios": "^1.6.8",
@@ -17,6 +18,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/eslint": "^8.56.10",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -24,6 +27,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.91.0"
   }
 }
